# knowledge-graph

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  index.html  models  test_vision.py
api/: Dockerfile  main.py  requirements.txt
api/routes/: graph.py  health.py  images.py  settings.py  sync.py
api/services/: config.py  db.py  job_manager.py  processor.py
docker/knowledge-graph-mcp/: Dockerfile
docker/nginx/: nginx.conf
docker/whisper/: Dockerfile
docs/: ISSUES.md  improvements-report.html  infinite-canvas-report.html  local-stt-landscape.html  system-vitals-2026-07-24-batch.md  system-vitals-2026-07-24-idle.md  system-vitals-baseline.md  transcription-challenge-report.html  ui-mobile-report.html
mcp-services/: pyproject.toml
mcp-services/src/knowledge_graph_mcp/: __init__.py  __main__.py  server.py
processors/: exif_extractor.py  face_recognizer.py
scripts/: backfill_photo_dates.py  build-llama-cpp.sh  clear-graph.sh  download-models.sh  fix_orphan_nodes.py  health-check.sh  merge_duplicate_entities.py  process_image.py  reprocess_faces.sh  setup-docker.sh  start-all.sh  start-api.sh  start-llama-servers.sh  stop-all.sh
ui/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
ui/e2e/: helpers.ts  image-workflow.spec.ts
ui/playwright-report/: index.html
ui/src/: app.css  app.d.ts  app.html
ui/src/lib/: constants.ts  framework7.ts
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ui/static/: config.json
(+64 files in other folders)
