[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-graph-mcp"
version = "0.1.0"
description = "Facade MCP server exposing 4 curated KG tools from LightRAG for llama.cpp WebUI integration"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.0",
    "httpx>=0.28.0",
    "setproctitle>=1.3.0",
]

[project.scripts]
knowledge-graph-mcp = "knowledge_graph_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_graph_mcp"]